# Mooncake

./: CMakeLists.txt
benchmarks/storage_benchmark/: storage_benchmark.py
mooncake-benchmark/: CMakeLists.txt
mooncake-benchmark/dynamo/: benchmark.cpp
mooncake-integration/: CMakeLists.txt
mooncake-integration/transfer_engine/: transfer_engine_py.cpp  transfer_engine_py.h
mooncake-store/include/: transfer_task.h
mooncake-store/src/: CMakeLists.txt  client.cpp
mooncake-transfer-engine/: CMakeLists.txt
mooncake-transfer-engine/benchmark/: CMakeLists.txt  main.cpp  te_backend.cpp  tent_backend.cpp  tev1_backend.cpp  utils.cpp  utils.h
mooncake-transfer-engine/benchmark-python/: kvbench_profiler.py  kvbench_store.py
mooncake-transfer-engine/config/: transfer-engine.json
mooncake-transfer-engine/example/: CMakeLists.txt  transfer_engine_bench.cpp  transfer_engine_bench_v1.cpp
mooncake-transfer-engine/include/v1/: transfer_engine.h  transfer_engine_inl.h
mooncake-transfer-engine/include/v1/common/: common.h  config.h  status.h  types.h
mooncake-transfer-engine/include/v1/metadata/: metadata.h  segment.h
mooncake-transfer-engine/include/v1/transport/: transport.h
mooncake-transfer-engine/include/v1/transport/gds/: gds_transport.h
mooncake-transfer-engine/include/v1/transport/io_uring/: io_uring_transport.h
mooncake-transfer-engine/include/v1/transport/mnnvl/: mnnvl_transport.h
mooncake-transfer-engine/include/v1/transport/rdma/: buffers.h  quota.h  rail_monitor.h
mooncake-transfer-engine/include/v1/utility/: cluster_topology.h  rpc.h  topology.h
mooncake-transfer-engine/src/: CMakeLists.txt  transfer_engine_c.cpp
mooncake-transfer-engine/src/transport/efa_transport/: efa_endpoint.cpp
mooncake-transfer-engine/src/transport/nvlink_transport/: nvlink_transport.cpp
mooncake-transfer-engine/src/transport/rdma_transport/: rdma_endpoint.cpp
mooncake-transfer-engine/src/v1/: CMakeLists.txt  transfer_engine.cpp  transfer_engine_inl.cpp
mooncake-transfer-engine/src/v1/common/: config.cpp
mooncake-transfer-engine/src/v1/memory/: allocator.cpp
mooncake-transfer-engine/src/v1/metadata/: metadata.cpp  segment.cpp
mooncake-transfer-engine/src/v1/transport/: CMakeLists.txt
mooncake-transfer-engine/src/v1/transport/rdma/: buffers.cpp  (+6 more)
mooncake-transfer-engine/src/v1/utility/: cluster_topology.cpp  rpc.cpp  topology.cpp
mooncake-transfer-engine/tent/: CMakeLists.txt
mooncake-transfer-engine/tent/config/: transfer-engine.json
mooncake-transfer-engine/tent/docs/: TE_PLUS_ARCHITECTURE_PLAN.md
mooncake-transfer-engine/tent/include/tent/: transfer_engine.h
mooncake-transfer-engine/tent/include/tent/common/: config.h  status.h  types.h
mooncake-transfer-engine/tent/include/tent/common/concurrent/: bounded_mpsc_queue.h  rw_spinlock.h  thread_local_storage.h  thread_pool.h  ticket_lock.h
mooncake-transfer-engine/tent/include/tent/common/utils/: ip.h  os.h  random.h  string_builder.h
mooncake-transfer-engine/tent/include/tent/metastore/: etcd.h  http.h  redis.h
mooncake-transfer-engine/tent/include/tent/platform/: ascend.h  cpu.h  cuda.h  gpu_vendor.h
mooncake-transfer-engine/tent/include/tent/platform/gpu_vendor/: ascend.h  cpu.h
mooncake-transfer-engine/tent/include/tent/rpc/: rpc.h
mooncake-transfer-engine/tent/include/tent/runtime/: loader.h  platform.h  topology.h  transfer_engine_impl.h  transport.h  transport_loader.h  transport_selector.h
mooncake-transfer-engine/tent/include/tent/transport/ascend/: ascend_direct_transport.h
mooncake-transfer-engine/tent/include/tent/transport/gds/: gds_transport.h
mooncake-transfer-engine/tent/include/tent/transport/io_uring/: io_uring_transport.h
mooncake-transfer-engine/tent/include/tent/transport/mnnvl/: mnnvl_transport.h
mooncake-transfer-engine/tent/include/tent/transport/nvlink/: nvlink_transport.h
mooncake-transfer-engine/tent/include/tent/transport/rdma/: buffers.h  context.h  cq.h  endpoint.h  endpoint_store.h  params.h  quota.h  rail_monitor.h  rdma_transport.h  shared_quota.h  slice.h  workers.h
mooncake-transfer-engine/tent/include/tent/transport/shm/: shm_transport.h
mooncake-transfer-engine/tent/include/tent/transport/tcp/: tcp_transport.h
mooncake-transfer-engine/tent/src/: CMakeLists.txt  transfer_engine.cpp  transfer_engine_c.cpp
mooncake-transfer-engine/tent/src/common/: config.cpp
mooncake-transfer-engine/tent/src/metastore/: CMakeLists.txt  etcd.cpp  http.cpp  redis.cpp
mooncake-transfer-engine/tent/src/platform/: CMakeLists.txt  backend.cpp  cpu_probe.cpp
mooncake-transfer-engine/tent/src/platform/ascend/: ascend_probe.cpp
mooncake-transfer-engine/tent/src/platform/cuda/: cuda_probe.cpp
mooncake-transfer-engine/tent/src/python/: CMakeLists.txt
mooncake-transfer-engine/tent/src/runtime/: CMakeLists.txt  loader.cpp  metastore.cpp  platform.cpp  proxy_manager.cpp  topology.cpp  transfer_engine_impl.cpp  transport_loader.cpp  transport_selector.cpp
mooncake-transfer-engine/tent/src/transport/: CMakeLists.txt
mooncake-transfer-engine/tent/src/transport/ascend/: CMakeLists.txt  ascend_direct_transport.cpp
mooncake-transfer-engine/tent/src/transport/bufio/: CMakeLists.txt  bufio_transport.cpp
mooncake-transfer-engine/tent/src/transport/gds/: gds_transport.cpp
mooncake-transfer-engine/tent/src/transport/io_uring/: CMakeLists.txt  io_uring_transport.cpp
mooncake-transfer-engine/tent/src/transport/mnnvl/: CMakeLists.txt  mnnvl_transport.cpp
mooncake-transfer-engine/tent/src/transport/nvlink/: nvlink_transport.cpp
mooncake-transfer-engine/tent/src/transport/rdma/: CMakeLists.txt  buffers.cpp  context.cpp  cq.cpp  endpoint.cpp  endpoint_store.cpp  quota.cpp  rail_monitor.cpp  rdma_transport.cpp  shared_quota.cpp  workers.cpp
mooncake-transfer-engine/tent/src/transport/shm/: CMakeLists.txt  shm_transport.cpp
mooncake-transfer-engine/tent/src/transport/tcp/: CMakeLists.txt  tcp_transport.cpp
mooncake-wheel/tests/: transfer_engine_initiator_test.py
scripts/: build_wheel.sh  compute_cluster_topology.py  generate_cluster_topology.py
(+8 files in other folders)
